homebrew_challenge/src/App.css
.App {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
}
.col-11 p {
  font-weight: bold;
}
.section {
  width: 100%;
  height: 55px;
  -ms-display: flexbox;
  display: flex;
}

#icon {
  width: 10%;
  padding-left: 30px;
}
#message {
  width: 85%;
  font-weight: bold;
}

.widgets_block {
  /*height: 600px;*/
}
.widgets_block .row {
  height: 100%;
}
.widgets_block col {
  height: 100%;
}

.widgets_block p {
  position: absolute;
  left: 50%;
  top: 50%;
}
.navbar{
    margin-bottom: 15px;
}

.row{
    height: 125%;
}

